vlib/v/checker/tests/assign_blank_none_err.out
vlib/v/checker/tests/assign_blank_none_err.vv:2:7: error: cannot assign a `none` value to a variable
    1 | fn main() {
    2 |     _ := none
      |          ~~~~
    3 |     _ = none
    4 | }
vlib/v/checker/tests/assign_blank_none_err.vv:3:6: error: cannot assign a `none` value to blank `_` identifier
    1 | fn main() {
    2 |     _ := none
    3 |     _ = none
      |         ~~~~
    4 | }
